# JapaneseLessons

./: .env.template  .gitignore  README.md  alembic.ini  config.py  generate_lesson.py  install.ps1  lesson_generator.py  llm_client.py  migrate_structure.ps1  narrative_benjamin_blumchen_bauernhof.txt  narrative_forrest_gump.txt  narrative_pride_and_prejudice.txt  narrative_totoro.txt  progress_report.md  progress_report_prev.md  prompt_template.py  pyproject.toml  requirements.txt  video_builder.py  vocab_generator.py
alembic/: README  env.py
alembic/versions/: 64573bb40ecc_add_llm_usage_tracking_tables.py  a9b2f1e5c44d_.py
curriculum/: curriculum.json  curriculum_hungarian.json
docs/: architecture.md  content_delivery.md  decision_anki_export.md  decision_caching.md  decision_cli_framework.md  decision_engine_service_boundaries.md  decision_fonts_rendering.md  decision_llm_integration.md  decision_output_folder.md  decision_persistence.md  decision_tts_engine.md  decision_video_pipeline.md  development_history.md  feature_progress.md  guide_hungarian_english_adaptation.md  gumroad.md  internal_module_dependencies.md  internal_module_dependencies.mmd  internal_module_dependency_details.md  project_scale.md  software_engineering.md  structure.md  vector_indexing.md
docs/decisions/: decision_cli_framework.md  decision_config_validation.md  decision_engine_service_boundaries.md  decision_fonts_rendering.md  decision_llm_integration.md  decision_output_folder.md  decision_pipeline_orchestration.md  decision_progress_logging.md  decision_project_structure.md  decision_tts_engine.md  decision_video_pipeline.md  development_history.md
docs/pipeline/: README.md  step_decomposition.md  step_narrative_generator.md  step_narrative_grammar.md
japanese_lesson_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jlesson/: __init__.py  asset_compiler.py  cli.py  config.py  curriculum.py  item_generator.py  language_config.py  lesson_pipeline.py  lesson_report.py  lesson_store.py  llm_cache.py  llm_client.py  models.py  pipeline_core.py  pipeline_gadgets.py  pipeline_orchestrator.py  profiles.py  prompt_template.py  retrieval.py  touch_compiler.py  vocab_generator.py
jlesson/curriculum/: __init__.py  (+9 more)
spike/: spike_01_tts.py  spike_02_cards.py  spike_03_video.py  spike_04_full_pipeline.py  spike_05_performance.py  spike_06_llm_evaluation.py  spike_07_lmstudio_api.py  spike_08_curriculum.py  spike_09_demo.py  spike_10_demo.py
tests/: test_asset_compiler.py  test_cli_lesson_render.py  test_curriculum.py  test_field_map.py  test_hungarian.py  test_language_config_split.py  test_lesson_pipeline.py  test_lesson_report.py  test_lesson_store.py  test_llm_cache.py  test_llm_client.py  test_narrative_generation.py  test_pipeline_llm_trace.py  test_profiles.py  test_prompt_template.py  test_rcm_usage_metrics.py  test_retrieval.py  test_touch_compiler.py  test_tts_engine.py  test_video_builder.py  test_video_cards.py  test_vocab_generator.py
tools/: analyze_internal_dependencies.ps1  check_db.py  generate_thumbnail.py  import_lessons_to_rcm.py  internal_module_dependencies.py  llm_audit.py  make_shorts.py  upload_lemonsqueezy.py  upload_to_gumroad.py  upload_youtube_shorts.py
vocab/: animals.json  bodyparts.json  clothing.json  family.json  farm-animals.json  food.json  math.json  sport.json  travel.json  weather.json  zoo.json
(+189 files in other folders)
