[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "japanese-lesson-generator"
version = "0.1.0"
description = "CLI tool for generating structured Japanese learning lessons with high repetition"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"

dependencies = []  # Core CLI is stdlib-only

[project.optional-dependencies]
video = [
    "edge-tts>=7.0",
    "moviepy>=2.0",
    "Pillow>=10.0",
]
llm = [
    "openai>=1.0",
]
all = [
    "japanese-lesson-generator[video,llm]",
]

[project.scripts]
japanese-lesson = "generate_lesson:main"

[tool.setuptools]
py-modules = [
    "generate_lesson",
    "curriculum",
    "vocab_generator",
    "prompt_template",
    "llm_client",
    "config",
    "tts_engine",
    "video_cards",
    "video_builder",
]

[tool.setuptools.package-data]
"*" = ["vocab/*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: tests that require a running LM Studio server (http://localhost:1234)",
    "internet: tests that call external services (Microsoft Edge TTS)",
    "video: tests that render a full .mp4 — slow, requires ffmpeg",
]
