[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "japanese-lesson-generator"
version = "0.1.0"
description = "CLI tool for generating structured Japanese learning lessons with high repetition"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"

dependencies = [
    "python-dotenv>=1.0",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
video = [
    "edge-tts>=7.0",
    "moviepy>=2.0",
    "Pillow>=10.0",
]
llm = [
    "openai>=1.0",
]
retrieval = [
    "openai>=1.0",
    "chromadb>=0.5",
]
all = [
    "japanese-lesson-generator[video,llm,retrieval]",
]

[project.scripts]
jlesson = "jlesson.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jlesson*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "unit: fast, self-contained unit tests with no external dependencies",
    "integration: tests that require a running LM Studio server (http://localhost:1234)",
    "internet: tests that call external services (Microsoft Edge TTS)",
    "video: tests that render a full .mp4 — slow, requires ffmpeg",
]
